Fixed to show the link to code for ichikawa

--- a/css/custom.css
+++ b/css/custom.css
@@ -133,3 +133,7 @@ a:hover {
 	 color: #FF0000;
 	 text-decoration: underline;
 }
+#cfi > p > a{
+	 color: #FF0000;
+	 text-decoration: underline;
+}
